Pointer events must be explicitly allowed -- fixed bug where containers were covering change password and delete account buttons

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 /* Palette black:#1F1C1C  brown:#8A6855  salmon: #F04235  lightblue: #B7E3E4   sheetmetal: #9C9A9A  */
 body, html {
+  pointer-events: none;
   letter-spacing: 1.5px;
   margin: 0;
   padding: 0;
@@ -9,6 +10,7 @@ body, html {
 
 .main-content {
   overflow: visible;
+  pointer-events: none;
 }
 
 .grid {
@@ -19,12 +21,14 @@ body, html {
 }
 
 .App {
+  pointer-events: none;
   overflow: visible;
   position: relative;
   text-align: center;
   margin:0;
 }
 .support-container-div {
+  pointer-events: all;
   position: relative;
   overflow: auto;
   height: 700px;
@@ -299,7 +303,7 @@ table {
 
 
 .thank-you-div {
-
+  pointer-events: all;
   position: absolute;
   justify-content: center;
   align-items: center;
