--- a/client/src/components/AccountSettings/AccountSettings.css
+++ b/client/src/components/AccountSettings/AccountSettings.css
@@ -16,6 +16,7 @@
   background: white;
   width: 250px;
   height: 100%;
+  pointer-events: all;
 }
 
 .settings-icon-header {
@@ -34,6 +35,7 @@
   width: 100%;
   height: 100vh;
   z-index: 1;
+  pointer-events: none;
 }
 .tab {
   letter-spacing: 1px;
@@ -50,6 +52,8 @@
   padding-top: 15px;
   border: none;
   background: none;
+  pointer-events: all;
+
 }
 .profile-tab {
   top: 50px;
@@ -65,6 +69,6 @@
 }
 .Profile-Footer {
   position: absolute;
-  bottom: -80px;
+  bottom: -170px;
   z-index: 2;
 }
