--- a/client/src/components/AccountSettings/Profile.css
+++ b/client/src/components/AccountSettings/Profile.css
@@ -10,14 +10,13 @@
   left: 25%;
   top: 50px;
   border-radius: 5px;
-  z-index: -1;
+  pointer-events: all;
 }
 .permissions-card-container {
   display: flex;
   justify-content: space-evenly;
   background: white;
   width: 100%;
-  z-index: 2;
 }
 .account-cogs {
   font-size: 52px;
@@ -38,4 +37,22 @@
   font-size: 18px;
   width: 400px;
   height: 50px;
+  cursor: pointer;
+  pointer-events: all;
+}
+.pw-modal {
+  padding: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  pointer-events: all;
+  background: pink;
+  border-radius: 5px;
+  box-shadow: 2px 10px 20px lightgray;
+  position: absolute;
+  height: 300px;
+  width: 500px;
+  top: 200px;
+  left: 40%;
 }
