--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -1,5 +1,6 @@
 
 .login {
+  pointer-events: all;
   background: #f7f7f7;
   z-index: 3;
   position: relative;
@@ -82,14 +83,15 @@
   border-radius: 10px;
   height: 60px;
   width: 180px;
-  margin-top: 50px;
+  margin: 50px 0 0;
   box-shadow: 0px 10px 10px #edd8d5;
-  transition: box-shadow .2s ease-out;
-  -webkit-transition: box-shadow .2s ease-out;
-    -moz-transition: box-shadow .2s ease-out;
-    -o-transition: box-shadow .2s ease-out;
+  transition: margin .2s ease-out, box-shadow .2s ease-out;
+  -webkit-transition:  margin .2s ease-out, box-shadow .2s ease-out;
+    -moz-transition:  margin .2s ease-out, box-shadow .2s ease-out;
+    -o-transition:  margin .2s ease-out, box-shadow .2s ease-out;
 }
 #sign-in-button:hover {
+  margin: 51px 0 -1px;
   cursor: pointer;
   box-shadow: none;
 }
